# hABM-AlveolusModel-v2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VideoS1.m4v  config.json  config_all_configurations.json
src/: CMakeLists.txt  create-new-simulator.sh  main.cpp
src/apps/alveolus/: AgentManagerAlveolus.cpp  AgentManagerAlveolus.h  AlveoleSite.cpp  AlveoleSite.h  AnalyserAlveolus.cpp  AnalyserAlveolus.h  CMakeLists.txt  CellFactoryAlveolus.cpp  CellFactoryAlveolus.h  InSituMeasurementsAlveolus.cpp  InSituMeasurementsAlveolus.h  SimulatorAlveolus.cpp  SimulatorAlveolus.h  io_utils_alveolus.cpp  io_utils_alveolus.h
src/apps/alveolus/cellparts/: HyphalBranch.cpp  HyphalBranch.h
src/apps/alveolus/cells/: FungalCellAlveolus.cpp  FungalCellAlveolus.h  ImmuneCellAlveolus.cpp  (+3 more)
src/apps/example/: AnalyserExample.cpp  AnalyserExample.h  CellFactoryExample.cpp  CellFactoryExample.h  CuboidSiteExample.cpp  CuboidSiteExample.h  FungalCellExample.cpp  FungalCellExample.h  InSituMeasurementsExample.cpp  InSituMeasurementsExample.h  SimulatorExample.cpp  SimulatorExample.h  io_utils_example.cpp  io_utils_example.h
src/core/analyser/: Analyser.cpp  Analyser.h  InSituMeasurements.cpp  InSituMeasurements.h  histogram_measurement.cpp  histogram_measurment.h  pair_measurement.h  pair_measurment.cpp
src/core/basic/: ColorRGB.cpp  ColorRGB.h  Coordinate3D.cpp  Coordinate3D.h  InversionSampler.cpp  InversionSampler.h  Randomizer.cpp  Randomizer.h  Sampler.cpp  Sampler.h  SphericCoordinate3D.cpp  SphericCoordinate3D.h
src/core/simulation/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  CMakeLists.txt  Cell.cpp  Cell.h  Condition.cpp  Condition.h  Interaction.cpp  Interaction.h  Interactions.cpp  Interactions.h  Simulator.cpp  Simulator.h  Site.cpp  Site.h
src/core/utils/: io_util.cpp  io_util.h  macros.h  misc_util.cpp  misc_util.h  time_util.cpp  time_util.h
src/core/visualisation/: PovFile.cpp  PovFile.h  PovRayObject.cpp  PovRayObject.h  Visualizer.cpp  Visualizer.h
test/: CMakeLists.txt
test/configurations/testSimulatorAlveolus/: config.json
test/src/: testConfigurations.cpp
(+120 files in other folders)
